# conan-lib-demo

./: .gitignore  CMakeLists.txt  README.md  conanfile-bin.py  conanfile-headeronly.py  conanfile.py
src/: CMakeLists.txt  Foo.cpp  Foo.h
test/: CMakeLists.txt  main.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: main.cpp
